--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -1,134 +1,255 @@
 @import url('https://fonts.googleapis.com/css2? family= Roboto:wght@100 & display=swap');
 
+/* COLORS */
 :root {
-    --color-background-color: #3a4750;
-    --color-text-color: white;
-    --color-border-color: #d81f26;
-    --color-hover-color: #ff0008;
-    --color-select-color: #7a7a7a;
+    --Primary: #3a4750;
+    --Secondary: #ff0008;
+    --Tertiary: #d81f26;
+    --White: white;
+    --Default: #3a47504d;
 }
 
-
 html {
-    background-color: var(--color-background-color);
     font-size: 65.2%;
     scroll-behavior: smooth;
+    background-color: var(--Primary);
 }
 
 body {
     font: 1.6rem 'Roboto', sans-serif;
     font-weight: bold;
-    color: var(--color-text-color);
 }
 
-.image {
-    width: 14rem;
-    float: left;
-    margin: 4rem;
-}
-
-header h1 {
-    padding: 2.5rem;
-    border-radius: 2rem;
-    text-align: center;
-    font-size: 5rem;
-    background-color: var(--color-border-color);
-    color: var(--color-text-color);
-    border: 0.5rem solid #3a47504d;
-    text-shadow: #3a4750 5px 5px;
-    max-width: 100rem;
-    margin: 0 auto;
-}
-
-main section h2 {
-    text-align: center;
-    margin: 4rem;
-}
-
-main section h2 a {
-    color: var(--color-text-color);
-}
-
-main section h2 a:hover {
-    color: var(--color-hover-color);
-}
-
-#container {
+/* HEADER */
+header{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2.5rem;
-    margin: 0rem 10rem;
+    grid-template-columns: repeat(6,1fr);
+    margin-top: 2.5rem;
+}
+header img{
+    min-width: 15rem;
+    margin-left: 5rem;
+    margin-top: 3rem;
+}
+header h1{
+    font-size: 5rem;
     padding: 2.5rem;
-    background-color: var(--color-border-color);
-    border-radius: 1rem;
+    color: var(--White);
+    border: 0.5rem solid var(--Default);
+    border-radius: 1.5rem;
+    text-shadow: var(--Primary) 5px 5px;
+    background-color: var(--Tertiary);  
+    text-align: center;
+    grid-column: 2/6;
 }
 
-main section ul li img {
+/* MAIN */
+main h2, main a{
+    text-align: center;
+    margin-top: 5rem;
+    color: var(--White);
+    font-size: 3rem;
+}
+main h2 a:hover{
+    color: var(--Secondary);
+}
+
+main .grid-picture-large {
+    display: grid;
+    padding: 2.5rem;
+    margin: 6rem auto;
+    grid-template-columns: repeat(4,1fr);    /* 4 colonnes dans (une fraction = ( ligne)) */
+    grid-gap: 2.5rem;
+    background-color: var(--Tertiary);
+    border-radius: 1rem;
+    max-width: 120rem;
+}
+main ul li img{
     display: block;
     width: 100%;
     border-radius: 0.5rem;
 }
 
-main section ul li img:hover {
-    transform: scale(1.03);
-    transition: 0.5s;
-    box-shadow: 0rem 0rem 0.5rem 0.5rem var(--color-hover-color);
+/* scroll bars */
+*{
+    scrollbar-width: thin;
+    scrollbar-color: rgb(255, 2, 2) var(--Primary);
+}
+*::-webkit-scrollbar {
+    width: 0.8rem;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 0, 0);
 }
 
-.titre {
+ul figure{
+    position: relative;
+}
+ul figure .material-icons{
+    vertical-align: -.4rem;
+}
+/* Overley effect */
+ul figure figcaption{
+    display: grid;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.6);
+    align-items: center;
+    transform: scale(0);
+    transition: all 500ms ease-in-out;
+    transform-origin: center center;
+    cursor: pointer;
+    color: #fff;
     text-align: center;
 }
+ul figure:hover figcaption{
+    transform: scale(1);
+}
+/* modale */
+.parent-modale{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
+    z-index: -1;
+    transition: all 0.4s ease-in-out;
+}
+.parent-modale .modale{
+    max-width: 37rem;
+    padding: 1rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.6);
+    z-index: 2;
+    cursor: pointer;   
+}
+.parent-modale .modale .desc{
+    position: static;
+    transition: none;
+    width: 100%;
+    background-color: #fff;
+    color: #222; 
+}
+.modale-active{
+    z-index: 1;
+    opacity: 1;
+    transform-origin: center center;
+}
+.parent-modale .modale .desc h3{
+    text-transform: capitalize;
+    font-size: x-large;
+    font-weight: 400;
+    background-color: #222;
+    color: #fff;
+    padding: 1rem;
+}
+.parent-modale .modale img{
+	width: 100%;
+	max-height: 80vh;
+}
+.parent-modale .modale .desc p :is(time){
+    padding: 1rem;
+}
+.parent-modale .modale button{
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    z-index: 2;
+    color: #333;
+    cursor: pointer;
+        background-color:rgba(240, 240, 240, 0.5);
+        border-radius: 0.5rem;
+}
 
-form {
-    width: 80%;
+
+/* Formulaire */
+form h3{
+    font-size: 3rem;
+    color: var(--White);
+    text-align: center;
+    margin-bottom: 4rem;
+}
+form *{
+    display: block;
+    width: 100%;
+}
+ form {
+    width: 80rem;
     margin: 2rem auto;
 }
-
-.formulaire {
-    display: flex;
-    flex-direction: column;
+form label{
+    color: var(--White);
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
-
-label {
-    margin: 1rem 29rem;
+form input{
+    border-radius: .5rem;
+    padding: 1rem .5rem;
+    margin-bottom: 2.5rem;
 }
-
-input {
-    width: 50%;
-    margin: 0rem auto;
-    margin-bottom: 2rem;
+form select{
+    width: 80rem;
+    border-radius: .5rem;
+    padding: 1rem .5rem;
+    background-color: var(--White);
+    cursor: pointer;
+    margin-bottom: 2.5rem;
 }
-
-input,
-select {
+input:last-of-type{
+    margin: 5rem auto;
+    width: 20rem;
     height: 5rem;
-    border-radius: 1rem;
-    padding-left: 1rem;
+    cursor: pointer;
+}
+input[type="submit"]:focus{
+    background-color: var(--Tertiary);
 }
 
-select {
-    width: 50%;
-    margin: 0rem auto;
-    /* color: black; */
-    background-color: white;
-    margin-bottom: 2rem;
-}
 
-#ville, #pays {
-    color: var(--color-select-color);
-}
-
-.button {
-    margin: 5rem auto;
-    width: 30%;
-}
-
-form h3 {
-    font-size: 3rem;
-    margin: 5rem auto;
-}
-
-footer {
+/* FOOTER */
+footer p {
+    font-size: 2rem;
+    color:var(--White);
+    margin: 0 auto;
     text-align: center;
-    cursor: cell;
+    margin-top: 2rem;
+    margin-bottom: 6rem;
+}
+/* Responsive */
+
+@media screen and (max-width: 75rem){
+    header{
+        display: block;
+    }
+    header img{
+        display: block;
+        margin: 0 auto 2rem;
+    }
+    header h1{
+        font-size: 4rem;
+        text-align: center;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+    main .grid-picture-large{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+@media screen and (max-width: 45rem) {
+    main .grid-picture-large{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
