--- a/css/style.css
+++ b/css/style.css
@@ -2,102 +2,233 @@
 
 /* https://www.csscolorpalettes.com/palettes/320#palette */
 
+
+/* COLORS */
 :root {
-    --color-background-color: #3a4750;
-    --color-text-color: white;
-    --color-shadow-color: #3a4750;
-    --color-border-color: #d81f26;
-    --color-boder-color-title: #3a47504d;
-    --color-hover-color: #ff0008;
+    --Primary: #3a4750;
+    --Secondary: #ff0008;
+    --Tertiary: #d81f26;
+    --White: white;
+    --Default: #3a47504d;
 }
 
 html {
-    background-color: var(--color-background-color);
     scroll-behavior: smooth;
     font-size: 62.5%;
+    background-color: var(--Primary);
 
 }
 body{
     font: 1.6rem 'Roboto', sans-serif;
     font-weight: bold; 
 }
+
+
+/* HEADER */
 header{
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    margin-top: 2.5rem;
 }
-.image{
-    display: block;
-    width: 14rem;
-    float: left;
-    margin: 4rem;
+header img{
+    min-width: 15rem;
+    margin-left: 5rem;
+    margin-top: 3rem;
 }
-header h1 {
-    display: block;
-    padding: 2.5rem;
-    border-radius: 2rem;
-    text-align: center;
+header h1{
     font-size: 5rem;
-    background-color: var(--color-border-color);
-    color: var(--color-text-color);
-    border: 0.5rem solid var(--color-boder-color-title);
-    text-shadow:var(--color-background-color) 5px 5px;
-    max-width: 100rem;
-    
-    margin: 0 auto;
+    padding: 2.5rem;
+    color: var(--White);
+    border: 0.5rem solid var(--Default);
+    border-radius: 1.5rem;
+    text-shadow: var(--Primary) 5px 5px;
+    background-color: var(--Tertiary);  
+    text-align: center;
+    grid-column: 2/6;
 }
 
-main section h2 {
+/* MAIN */
+main h2 {
     text-align: center;
     line-height: 3.5rem;
     margin-top: 3rem;
-    color: var(--color-text-color);
+    color: var(--White);
     font-size: 3rem;
 }
-main section h3{
+.first-title{
     text-align: center;
     margin: 4rem auto 3rem;
     line-height: 2.5rem;
-    color: var(--color-text-color);
+    color: var(--White);
     text-transform: uppercase;
 }
-#container {
+main .grid-picture-large {
     display: grid;
     padding: 2.5rem;
-    margin: 0rem 10rem;
+    margin: 0rem auto;
     grid-template-columns: repeat(4,1fr);    /* 4 colonnes dans (une fraction = ( ligne)) */
     grid-gap: 2.5rem;
-    background-color: var(--color-border-color);
+    background-color: var(--Tertiary);
     border-radius: 1rem;
+    max-width: 120rem;
 }
-main section ul li img {
+main ul li img{
     display: block;
     width: 100%;
     border-radius: 0.5rem;
 }
-main section ul li img:hover{
-    transform: scale(1.03);
-    transition: 0.5s;
-    box-shadow: 0rem 0rem 0.5rem 0.5rem var(--color-hover-color);
+/* scroll bars */
+*{
+    scrollbar-width: thin;
+    scrollbar-color: rgb(255, 2, 2) var(--Primary);
 }
-nav {
-    margin-top: 3rem;
+*::-webkit-scrollbar {
+    width: 0.8rem;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 0, 0);
+}
+
+
+/* Overlay effect */
+ul figure{
+    position: relative;
+}
+ul figure .material-icons{
+    vertical-align: -.4rem;
+}
+ul figure figcaption{
+    display: grid;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.6);
+    align-items: center;
+    transform: scale(0);
+    transition: all 500ms ease-in-out;
+    transform-origin: center center;
+    cursor: pointer;
+    color: #fff;
     text-align: center;
 }
-nav a {
-    color: #fff;
-    line-height: 7.5rem;
-    background-color: var(--color-border-color);
+ul figure:hover figcaption{
+    transform: scale(1);
+}
+/* modale */
+.parent-modale{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
+    z-index: -1;
+    transition: all 0.4s ease-in-out;
+}
+.parent-modale .modale{
+    width: 39rem;
     padding: 1rem;
-    border-radius: 0.5rem; 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.6);
+    z-index: 2;
+    cursor: pointer;   
 }
-nav a:hover{
-    background-color: var(--color-hover-color);
+.parent-modale .modale .desc{
+    position: static;
+    transition: none;
+    width: 100%;
+    background-color: #fff;
+    color: #222; 
 }
-footer {
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    color:var(--color-text-color);
+.modale-active{
+    z-index: 1;
+    opacity: 1;
+    transform-origin: center center;
+}
+.second-title{
+    text-transform: capitalize;
+    font-weight: 400;
+    background-color: #222;
+    color: #fff;
+    padding: 1rem;
+}
+.parent-modale .modale img{
+	width: 100%;
+	height: 100%;
+}
+.parent-modale .modale .desc p :is(time){
+    padding: 1rem;
+}
+.parent-modale .modale button{
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    z-index: 2;
+    color: #333;
+    cursor: pointer;
+        background-color:rgba(240, 240, 240, 0.5);
+        border-radius: 0.5rem;
+}
+main a{
+	display: block;
+	margin: 3rem auto;
+    color: #fff;
+    background-color: var(--Tertiary);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    text-align: center;
+    padding-top: 1.25rem;
+    max-width: 30rem;
+    height: 4.5rem;
+}
+main a:hover{
+    background-color: var(--Secondary);
+}
+
+/* FOOTER */
+footer p {
+    font-size: 2rem;
+    color:var(--White);
     margin: 0 auto;
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 6rem;
+}
+
+
+/* Responsive */
+
+@media screen and (max-width: 75rem){
+    header{
+        display: block;
+    }
+    header img{
+        display: block;
+        margin: 0 auto 2rem;
+    }
+    header h1{
+        font-size: 4rem;
+        text-align: center;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+    main .grid-picture-large{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+@media screen and (max-width: 45rem) {
+    main .grid-picture-large{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
