--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -30,7 +30,7 @@ header{
     margin-right: 9rem;
 }
 header img{
-    max-width: 15rem;
+    max-width: 14rem;
     margin-top: 3rem;
 }
 header h1{
@@ -60,7 +60,7 @@ main h2, main a{
 main .grid-picture-large {
     display: grid;
     padding: 2.5rem;
-    margin: 6rem auto;
+    margin: 5rem auto;
     grid-template-columns: repeat(4,1fr);    /* 4 colonnes dans (une fraction = ( ligne)) */
     grid-gap: 2.5rem;
     background-color: var(--Tertiary);
@@ -144,6 +144,8 @@ ul figure figcaption{
 ul figure:hover figcaption{
     transform: scale(1);
 }
+
+
 /* modale */
 .parent-modale{
     position: fixed;
@@ -190,7 +192,7 @@ ul figure:hover figcaption{
 }
 .parent-modale .modale img{
 	width: 100%;
-	max-height: 80vh;
+	height: 0%;
 }
 .parent-modale .modale .desc p :is(time){
     padding: 1rem;
@@ -234,7 +236,6 @@ form input{
     margin-bottom: 2.5rem;
 }
 form select{
-    width: 80rem;
     border-radius: .5rem;
     padding: 1rem .5rem;
     background-color: var(--White);
@@ -258,30 +259,62 @@ footer p {
     margin-top: 2rem;
     padding-bottom: 2rem;
 }
-/* Responsive */
 
-@media screen and (max-width: 75rem){
+
+/* Responsive */
+@media screen and (max-width: 80rem){
+    header{
+        margin-right: 0rem;
+    }
+    header img{
+        padding-bottom: 2rem;
+    }
+    header h1{
+        font-size: 3rem;
+    }
+    header span{
+        margin: auto 2rem;
+    }
+    main .grid-picture-large{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin: 5rem 2rem;
+    }
+
+}
+
+@media screen and (max-width: 60rem) {
     header{
         display: block;
     }
     header img{
         display: block;
-        margin: 0 auto 2rem;
+        margin: 0rem auto;
     }
     header h1{
-        font-size: 4rem;
-        text-align: center;
-        margin-left: 5rem;
-        margin-right: 5rem;
+        margin: 2.5rem ;
     }
-    main .grid-picture-large{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
+    main h2:first-of-type, main h2 a{
+        font-size: 2.5rem;
+    }
+    .material-icons.md-48{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0rem auto;
+    }
+    form{
+        width: 100%;
+        padding: 0rem 2rem;
     }
 }
+
 @media screen and (max-width: 45rem) {
     main .grid-picture-large{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+        padding: 1.5rem;
     }
 }
+
